实现法律咨询接口

--- a/fxs-platform-web/src/main/resources/templates/lawer_dashboard.html
+++ b/fxs-platform-web/src/main/resources/templates/lawer_dashboard.html
@@ -9,7 +9,7 @@
 	<div th:replace="fragments/header :: header" />
 	<div class="container">
 		<div class="starter-template">
-			Dashboard Under Resources<br/>
+			lawer_dashboard<br/>
 			<h1 th:text="${host}">Hello World</h1>
 		</div>
 	</div>
