--- a/fxs-platform-web/src/main/resources/templates/formsubmit.html
+++ b/fxs-platform-web/src/main/resources/templates/formsubmit.html
@@ -26,6 +26,11 @@
 		<p th:each="falltypus : ${falltypusdata}"
        		th:text="${falltypus.desc}">
         </p>
+        
+        <p th:each="city : ${enabledCity}"
+       		th:text="${city.name}">
+        </p>
+        
 	</div>
 	<div th:replace="fragments/footer :: footer" />
 	<script type="text/javascript" th:src="@{js/demo.js}"></script>
