--- a/fxs-platform-web/src/main/resources/templates/addSubFalltypus.html
+++ b/fxs-platform-web/src/main/resources/templates/addSubFalltypus.html
@@ -1,31 +1,19 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>上海小帅信息科技有限公司</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<!-- 引入 Bootstrap -->
-<link rel="stylesheet" type="text/css"
-	th:href="@{/css/bootstrap4/css/bootstrap.min.css}" />
-<link rel="stylesheet" type="text/css"
-	th:href="@{/css/bootstrap/scss/_nav.scss}" />
-<link rel="stylesheet" type="text/css"
-	th:href="@{/css/bootstrap/scss/_navbar.scss}" />
-<link rel="stylesheet" type="text/css"
-	th:href="@{/css/bootstrap/scss/_forms.scss}" />
-<link rel="stylesheet" type="text/css"
-	th:href="@{/css/bootstrap/scss/_dropdown.scss}" />
+<link href="/webjars/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+<link href="/webjars/bootstrap/3.3.5/css/bootstrap-theme.min.css" rel="stylesheet" />
 <link rel="stylesheet" type="text/css" th:href="@{/css/customer.css}" />
-<script
-	src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
-<script
-	src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-4"></div>
-			<div class="col-md-4" style="border: 1px solid black; margin: 0 5px">
+			<div class="col-md-3"></div>
+			<div class="col-md-6" style="border: 1px solid black;">
 				<form role="form">
 					<div class="row signupTitle">
 						<h3>添加子案件类型</h3>
@@ -43,32 +31,59 @@
 					<button type="button" id="addSubLevel" class="btn btn-primary">保存子案件类型</button>
 				</form>
 			</div>
-			<div class="col-md-4"></div>
+			<div class="col-md-3"></div>
 		</div>
 	</div>
-
+	<div class="modal fade" id="notificationModal" tabindex="-1" role="dialog" aria-labelledby="notificationModalLabel" aria-hidden="true">
+	    <div class="modal-dialog">
+	        <div class="modal-content">
+	            <div class="modal-header">
+	                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+	                <h4 class="modal-title">提示信息</h4>
+	            </div>
+	            <div class="modal-body" id="modalContent"></div>
+	            <div class="modal-footer">
+	                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+	            </div>
+	        </div>
+	    </div>
+	</div>
+	<script type="text/javascript" src="/webjars/jquery/3.2.0/jquery.min.js"></script>
+	<script type="text/javascript" src="/webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script type="text/javascript">
-		$(document).ready(function() {
-			$("#addSubLevel").on("click", function() {
-				console.log($("#selectParent").val())
-				var data = {
-					"name" : $("#subType").val(),
+	$(document).ready(function() {
+		$("#addSubLevel").on("click", function() {
+			var subType = $("#subType").val()
+			
+			if($.trim(subType) == '') {
+				$("#modalContent").empty().append("案件类型不能为空")
+				$("#notificationModal").modal("show")
+				return false
+			}
+			
+			$.ajax({
+				type : 'POST',
+				url : '/falltypus',
+				data : JSON.stringify({
+					"name": subType,
 					"parentTypeId": $("#selectParent").find("option:selected").attr("id")
+				}),
+				contentType : "application/json; charset=utf-8",
+				success : function(data) {
+					$("#modalContent").empty().append("案件类型添加成功")
+					$("#notificationModal").modal("show")
+				},
+				error : function(error) {
+					$("#modalContent").empty().append("案件类型添加失败")
+					$("#notificationModal").modal("show")
 				}
-				$.ajax({
-					type : 'POST',
-					url : '/falltypus',
-					data : JSON.stringify(data),
-					contentType : "application/json; charset=utf-8",
-					success : function(data) {
-						console.log(data)
-					},
-					error : function(error) {
-						console.log(error)
-					}
-				});
-			})
-		});
+			});
+		})
+		
+		$('#notificationModal').on('hidden.bs.modal', function () {
+			$("#subType").val("")
+		})
+	});
 	</script>
 </body>
 </html>
