--- a/fxs-platform-web/src/main/resources/templates/fragments/header.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/header.html
@@ -36,11 +36,11 @@
 		<div class="img-responsive">
 			<div class="container">
 				<ul class="nav loginBox">
-					<li><a href="#" target="_self">登录</a><span>|</span></li>
-					<li><a href="#" target="_self">注册</a><span>|</span></li>
+					<li><a href="#" sec:authentication="name" /><span>|</span></li>
 					<li><a href="#" target="_self">您的消息</a><span>|</span></li>
 					<li><a href="#" target="_self">关于我们</a><span>|</span></li>
 					<li><a href="#" target="_self">律师入口</a></li>
+					<li><a href="/signOut" sec:authorize="isAuthenticated()">登出</a></li>
 				</ul>
 				<ul class="clearboth"></ul>
 			</div>
