--- a/fxs-platform-web/src/main/resources/templates/addSubFalltypus.html
+++ b/fxs-platform-web/src/main/resources/templates/addSubFalltypus.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" style="height: 100%">
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>上海小帅信息科技有限公司</title>
 <link href="/webjars/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
-<link href="/webjars/bootstrap/3.3.5/css/bootstrap-theme.min.css" rel="stylesheet" />
-<link rel="stylesheet" type="text/css" th:href="@{/css/customer.css}" />
 </head>
-<body>
+<body style="height: 100%; background-color: #f2f2f2">
 	<div class="container-fluid">
-		<div class="row">
+		<div class="row" style="margin-top: 10%">
 			<div class="col-md-3"></div>
-			<div class="col-md-6" style="border: 1px solid black;">
-				<form role="form">
-					<div class="row signupTitle">
-						<h3>添加子案件类型</h3>
+			<div class="col-md-6" style="border: 1px solid; background-color: #ffffff">
+				<form role="form" style="padding: 10px">
+					<div class="signupTitle">
+						<h3 align="center">添加子案件类型</h3>
 					</div>
 					<div class="form-group">
 						<label>选择父类型</label>
@@ -28,6 +26,7 @@
 						<label>输入子案件类型</label>
 						<input type="text" class="form-control" id="subType" />
 					</div>
+					<a type="button" class="btn btn-primary" href="/falltypus/create/parent">创建父案件类型</a>
 					<button type="button" id="addSubLevel" class="btn btn-primary">保存子案件类型</button>
 				</form>
 			</div>
