--- a/fxs-platform-web/src/main/resources/templates/fragments/footer.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/footer.html
@@ -1,20 +1,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
-<head>
-</head>
-<body>
-	<div th:fragment="footer">
-		<footer>
-			<script type="text/javascript" src="/webjars/jquery/3.2.0/jquery.min.js"></script>
-			<script type="text/javascript" src="/webjars/tether/1.4.0/js/tether.min.js"></script>
-			<script type="text/javascript" src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-			<ul class="list-group">
-				<li>© 2013-2017, shuai.com, Inc. All Rights Reserved. 上海小帅信息科技有限公司 沪ICP备14006851号-2</li>
-				<li>地址：上海市静安区XXXXXXXXX</li>
-				<li></li>
-				<li>沪公网安备 31011002000396号</li>
-			</ul>
-		</footer>
-	</div>
-</body>
+<div th:fragment="footer">
+	<footer>
+		<script src="bootstrap/js/jquery.min.js"></script>
+		<script src="bootstrap/js/bootstrap.min.js"></script>
+		<ul class="list-group">
+			<li>© 2013-2017, shuai.com, Inc. All Rights Reserved.
+				上海小帅信息科技有限公司 沪ICP备14006851号-2</li>
+			<li>地址：上海市静安区XXXXXXXXX</li>
+			<li></li>
+			<li>沪公网安备 31011002000396号</li>
+		</ul>
+	</footer>
+</div>
 </html>
