--- a/fxs-platform-web/src/main/resources/templates/index.html
+++ b/fxs-platform-web/src/main/resources/templates/index.html
@@ -1,30 +1,26 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org"
-xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
-	<title>上海小帅信息科技有限公司</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <!-- 引入 Bootstrap -->
-    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap4/css/bootstrap.min.css}" />
-    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap/scss/_nav.scss}" />
-    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap/scss/_navbar.scss}" />
-    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap/scss/_forms.scss}" />
-    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap/scss/_dropdown.scss}" />
-    <link rel="stylesheet" type="text/css" th:href="@{/css/customer.css}" />
-   <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
-   <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<title>上海小帅信息科技有限公司</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<!-- 引入 Bootstrap -->
+<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+<link rel="stylesheet" type="text/css" href="css/header.css" />
+<link rel="stylesheet" type="text/css" href="css/footer.css" />
+<link rel="stylesheet" type="text/css" href="css/customer.css" />
+<script src="bootstrap/js/jquery.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
 	<div class="img-responsive">
 		<div class="container">
 			<ul class="nav loginBox">
-				<li><a href="/user/signIn" target="_self">登录</a><span>|</span></li>
-				<li><a href="#" target="_self">注册</a><span>|</span></li>
-				<li><a href="#" target="_self">您的消息</a><span>|</span></li>
-				<li><a href="#" target="_self">关于我们</a><span>|</span></li>
-				<li><a href="#" target="_self">律师入口</a></li>
-				<li sec:authorize="isAuthenticated()"><a href="/signOut">登出</a></li>
+				<li><a href="/user/signIn">登录</a><span>|</span></li>
+				<li><a href="login_sign_ads_pop.html">注册</a><span>|</span></li>
+				<li><a href="#">关于我们</a><span>|</span></li>
+				<li><a href="laywer_sign.html" target="_self">律师入口</a></li>
 			</ul>
 			<ul class="clearboth"></ul>
 		</div>
@@ -37,19 +33,20 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 				<div class="col-md-1 mapId">上海</div>
 				<nav class="col-md-8 navbar-default" role="navigation">
 					<ul class="nav mainNav">
-						<li class="active"><a href="#">首页</a></li>
-						<li class="dropdown"><a href="#" class="dropdown-toggle"
-							data-toggle="dropdown"> 法律咨询 </a>
+						<li class="active"><a href="index.html">首页</a></li>
+						<li class="dropdown"><a href="counseling_free.html"
+							class="dropdown-toggle" data-toggle="dropdown"> 法律咨询 </a>
 							<ul class="dropdown-menu">
-								<li><a href="#">免费法律咨询</a></li>
+								<li><a href="counseling_free.html">免费法律咨询</a></li>
 								<li class="divider"></li>
-								<li><a href="#">电话咨询</a></li>
+								<li><a href="counseling.html">电话咨询</a></li>
 							</ul></li>
-						<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"> 打官司 </a>
+						<li class="dropdown"><a href="#" class="dropdown-toggle"
+							data-toggle="dropdown"> 打官司 </a>
 							<ul class="dropdown-menu">
-								<li><a href="#">找律师打官司</a></li>
+								<li><a href="lawsuit.html">找律师打官司</a></li>
 								<li class="divider"></li>
-								<li><a href="#">自助打官司</a></li>
+								<li><a href="selfhelplawsuit.html">自助打官司</a></li>
 							</ul></li>
 						<li><a href="#">其他法律业务</a></li>
 						<li class="lastItem"><a href="#">投诉</a></li>
@@ -65,7 +62,8 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 					</div>
 					<div class="row searchBox">
 						<div class="col-xs-12 col-md-10">
-							<input value="" placeholder="搜索案例..." class="form-control square-select margin-top-2" />
+							<input value="" placeholder="搜索案例..."
+								class="form-control square-select margin-top-2" />
 						</div>
 						<div class="col-xs-12 col-md-2">
 							<button type="submit" class="btn btn-default">开始搜索</button>
