--- a/fxs-platform-web/src/main/resources/templates/litigant_consulting_free.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_consulting_free.html
@@ -8,7 +8,9 @@
 	<div class="mainPart">
 		<div class="container">
 			<ol class="breadcrumb">
-				<li><a href="my.html">个人中心</a></li>
+				<li>
+					<a href="my.html">个人中心</a>
+				</li>
 				<li class="active">我的免费咨询</li>
 			</ol>
 			<h1 class="blue">我的免费咨询 (2)</h1>
@@ -23,7 +25,8 @@
 						</ul>
 						<ul class="writeInfoText ulCell myCell">
 							<li>啊得得得得得得啊得得得得得得啊得得得得完成安装工具栏一个集成了所有功能...快速设置层导出选项的预设和
-								规范导出得得得得得得啊得得得得得得啊得得得得得得啊得得得得得得</li>
+								规范导出得得得得得得啊得得得得得得啊得得得得得得啊得得得得得得
+							</li>
 							<li class="gray">2017.11.06 10:57
 								<a href="my_freedetails.html">查看详情</a>
 							</li>
