--- a/fxs-platform-web/src/main/resources/templates/public_consulting_phone.html
+++ b/fxs-platform-web/src/main/resources/templates/public_consulting_phone.html
@@ -16,7 +16,9 @@
 							<li>
 								<img th:src="@{/img/icon_counseling1.png}" />
 							</li>
-							<li><span>立即响应</span></li>
+							<li>
+								<span>立即响应</span>
+							</li>
 							<li class="ft12">专属律师，一打就通，立即获取法律服务</li>
 						</ul>
 					</div>
@@ -25,7 +27,9 @@
 							<li>
 								<img th:src="@{/img/icon_counseling2.png}" />
 							</li>
-							<li><span>专业</span></li>
+							<li>
+								<span>专业</span>
+							</li>
 							<li class="ft12">优选律师，为您提供透彻的分析、有价值的纠纷解决方案</li>
 						</ul>
 					</div>
@@ -34,7 +38,9 @@
 							<li>
 								<img th:src="@{/img/icon_counseling3.png}" />
 							</li>
-							<li><span>高性价比</span></li>
+							<li>
+								<span>高性价比</span>
+							</li>
 							<li class="ft12">24小时内不限次数、不限时长咨询，比线下500元/小时的咨询更高效更划算。</li>
 						</ul>
 					</div>
@@ -43,7 +49,9 @@
 							<li>
 								<img th:src="@{/img/icon_counseling4.png}" />
 							</li>
-							<li><span>服务细节到位</span></li>
+							<li>
+								<span>服务细节到位</span>
+							</li>
 							<li class="ft12">全程通话录音、服务结束为您提供纠纷解决方案，帮您理顺思路，服务不满意，立即退费</li>
 						</ul>
 					</div>
