--- a/fxs-platform-web/src/main/resources/templates/lawer_dashboard.html
+++ b/fxs-platform-web/src/main/resources/templates/lawer_dashboard.html
@@ -1,19 +1,144 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org"
-	  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8" />
-<title>dashboard</title>
-<div th:replace="fragments/header :: header-css" />
+<div th:replace="fragments/lawer_header :: lawer-header-css"></div>
 </head>
 <body>
-	<div th:replace="fragments/header :: header" />
-	<div class="container">
-		<div class="starter-template">
-			lawer_dashboard<br/>
-			<h1 th:text="${host}">Hello World</h1>
+	<div th:replace="fragments/lawer_header :: lawer-header"></div>
+	<div class="mainPart">
+		<div class="container">
+			<h1 class="blue">我的竞标案件</h1>
+			<p>正在进行的案件竞标赢积分榜单周期</p>
+			<section class="col-md-12 col-sm-12 writeInfo space20">
+				<div class="row">
+					<div class="col-md-4 col-sm-4">
+						<div class="ulCell laywer_right">
+							<ul>
+								<li class="lastItem">我的竞标</li>
+								<li><a href="#">待加入的竞标</a></li>
+								<li><a href="#">进行中的竞标</a></li>
+								<li><a href="#">评审中的竞标</a></li>
+								<li><a href="#">已评审的竞标</a></li>
+								<li><a href="#">可申请复核的竞标</a></li>
+								<li class="lastItem"><a href="#">已复核的竞标</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-md-8 col-sm-8 mybox">
+						<ul class="writeInfoText ulCell myCell">
+							<li>当前已加入竞标
+								<h4>1个</h4>
+							</li>
+						</ul>
+						<ul class="writeInfoText ulCell myCell">
+							<div class="row">
+								<div class="form-group col-md-3 col-sm-3 sLabel">
+									<label>业务领域:</label>
+								</div>
+								<ul class="form-group col-md-5 col-sm-8">
+									<li>
+										<label>
+											<input type="checkbox" checked="checked" /> 房产土地
+										</label>
+									</li>
+									<li>
+										<label>
+											<input type="checkbox" checked="checked" /> 劳动纠纷
+										</label>
+									</li>
+									<li>
+										<label>
+											<input type="checkbox" checked="checked" /> 婚姻家庭
+										</label>
+									</li>
+									<div class="clearboth"></div>
+								</ul>
+							</div>
+							<div class="row">
+								<div class="form-group col-md-3 col-sm-3 sLabel">
+									<label>选择榜单周期：</label>
+								</div>
+								<div class="form-group col-md-4 col-sm-5">
+									<select class="form-control">
+										<option value="">---全部---</option>
+										<option value="">第20171104期</option>
+										<option value="">第20171104期</option>
+										<option value="">第20171104期</option>
+										<option value="">第20171104期</option>
+									</select>
+								</div>
+							</div>
+							<div class="row">
+								<label><input type="checkbox" /> 只看未读的竞标</label>
+							</div>
+							<div class="row">
+								<div class="col-md-12 col-sm-12 btnNext btnSearch">
+									<button type="button" class="btn btn-primary btn-lg">查询</button>
+								</div>
+							</div>
+						</ul>
+						<ul class="writeInfoText ulCell myCell">
+							<li class="listTitle">
+								<b>劳动纠纷</b>
+								<span>案件编号 : 43826</span>
+								<span>榜单周期: 第20171108期</span>
+							</li>
+							<li>
+								<a href="">赢积分：</a>
+								<span class="orange">20</span>
+							</li>
+							<li>竞标发布时间： 2017.11.08 10:14</li>
+							<li>法律意见提交截止时间： 2017.11.09 10:25</li>
+							<li>加入竞标人数： 较少</li>
+							<div class="row">
+								<div class="col-md-12 col-sm-12 btnNext btnSearch">
+									<button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='laywer_mycasedetail.html'">查看详情</button>
+								</div>
+							</div>
+						</ul>
+						<ul class="writeInfoText ulCell myCell">
+							<li class="listTitle">
+								<b>劳动纠纷</b> 
+								<span>案件编号 : 43826</span>
+								<span>榜单周期: 第20171108期</span>
+							</li>
+							<li>
+								<a href="">赢积分：</a>
+								<span class="orange">20</span>
+							</li>
+							<li>竞标发布时间： 2017.11.08 10:14</li>
+							<li>法律意见提交截止时间： 2017.11.09 10:25</li>
+							<li>加入竞标人数： 较少</li>
+							<div class="row">
+								<div class="col-md-12 col-sm-12 btnNext btnSearch">
+									<button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='laywer_mycasedetail.html'">查看详情</button>
+								</div>
+							</div>
+						</ul>
+						<ul class="writeInfoText ulCell myCell">
+							<li class="listTitle">
+								<b>劳动纠纷</b>
+								<span>案件编号 : 43826</span>
+								<span>榜单周期: 第20171108期</span>
+							</li>
+							<li>
+								<a href="">赢积分：</a> 
+								<span class="orange">20</span>
+							</li>
+							<li>竞标发布时间： 2017.11.08 10:14</li>
+							<li>法律意见提交截止时间： 2017.11.09 10:25</li>
+							<li>加入竞标人数： 较少</li>
+							<div class="row">
+								<div class="col-md-12 col-sm-12 btnNext btnSearch">
+									<button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='laywer_mycasedetail.html'">查看详情</button>
+								</div>
+							</div>
+						</ul>
+					</div>
+				</div>
+			</section>
 		</div>
 	</div>
-	<div th:replace="fragments/footer :: footer" />
+	<div th:replace="fragments/lawer_footer :: lawer-footer"></div>
 </body>
 </html>
