--- a/fxs-platform-web/src/main/resources/templates/fragments/public_footer.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/public_footer.html
@@ -2,8 +2,9 @@
 	xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="public-footer">
 	<footer>
-		<script th:src="@{/bootstrap/js/jquery.min.js}"></script>
-		<script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
+		<script th:src="@{/js/jquery-3.2.1.slim.min.js}"></script>
+		<script th:src="@{/js/popper.min.js}"></script>
+		<script th:src="@{/bootstrap/dist/js/bootstrap.min.js}"></script>
 		<ul class="list-group">
 			<li>© 2013-2017, shuai.com, Inc. All Rights Reserved. 上海小帅信息科技有限公司 沪ICP备14006851号-2</li>
 			<li>地址：上海市静安区XXXXXXXXX</li>
