--- a/fxs-platform-web/src/main/resources/templates/lawer_dashboard.html
+++ b/fxs-platform-web/src/main/resources/templates/lawer_dashboard.html
@@ -139,6 +139,6 @@
 			</section>
 		</div>
 	</div>
-	<div th:replace="fragments/lawer_footer :: lawer-footer"></div>
+	<div th:replace="fragments/public_footer :: public-footer"></div>
 </body>
 </html>
