--- a/fxs-platform-web/src/main/resources/templates/litigant_consulting_phone.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_consulting_phone.html
@@ -44,6 +44,6 @@
 			</section>
 		</div>
 	</div>
-	<div th:replace="fragments/litigant_footer :: litigant-footer" ></div>
+	<div th:replace="fragments/public_footer :: public-footer" ></div>
 </body>
 </html>
