--- a/fxs-platform-web/src/main/resources/templates/public_lawsuit_self_service.html
+++ b/fxs-platform-web/src/main/resources/templates/public_lawsuit_self_service.html
@@ -27,6 +27,6 @@
 		    </div>
 	  	</div>
 	  </div>
-	<div th:replace="fragments/litigant_footer :: litigant-footer"></div>
+	<div th:replace="fragments/public_footer :: public-footer"></div>
 </body>
 </html>
