--- a/fxs-platform-web/src/main/resources/templates/fragments/user_center_header.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/user_center_header.html
@@ -2,18 +2,19 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
-<div th:fragment="public-header-css">
-	<title>上海小帅信息科技有限公司</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" type="text/css" th:href="@{/bootstrap/css/bootstrap.min.css}"/>
-	<link rel="stylesheet" type="text/css" th:href="@{/css/header.css}" />
-	<link rel="stylesheet" type="text/css" th:href="@{/css/footer.css}" />
-	<link rel="stylesheet" type="text/css" th:href="@{/css/customer.css}" />
+<div th:fragment="user-center-header-css">
+	<meta charset="utf-8" />
+        <title>上海小帅信息科技有限公司</title>
+        <meta name="description" content="Love Authority." />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+        <link rel="stylesheet" th:href="@{/css/style.css}" />
+        <link rel="stylesheet" th:href="@{/css/user_center_header.css}" />
 </div>
 </head>
 <body>
-	<div th:fragment="public-header">
+	<div th:fragment="user-center-header">
 		<div class="container">
 			<ul class="nav loginBox">
 				<li>
