--- a/fxs-platform-web/src/main/resources/templates/fragments/litigant_header.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/litigant_header.html
@@ -63,7 +63,7 @@
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown"> 打官司 </a>
 								<ul class="dropdown-menu">
 									<li>
-										<a th:href="@{/lawsuit/public/lawer}">找律师打官司</a>
+										<a th:href="@{/lawsuit/public/lawyer}">找律师打官司</a>
 									</li>
 									<li class="divider"></li>
 									<li>
