--- a/fxs-platform-web/src/main/resources/templates/fragments/public_header.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/public_header.html
@@ -29,7 +29,7 @@
 					<span>|</span>
 				</li>
 				<li>
-					<a th:href="@{/lawer/signIn}">律师入口</a>
+					<a th:href="@{/lawyer/signIn}">律师入口</a>
 				</li>
 			</ul>
 			<ul class="clearboth"></ul>
@@ -62,7 +62,7 @@
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown"> 打官司 </a>
 							<ul class="dropdown-menu">
 								<li>
-									<a th:href="@{/lawsuit/public/lawer}">找律师打官司</a>
+									<a th:href="@{/lawsuit/public/lawyer}">找律师打官司</a>
 								</li>
 								<li class="divider"></li>
 								<li>
