--- a/fxs-platform-web/src/main/resources/templates/lawyer_dashboard.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyer_dashboard.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<div th:replace="fragments/lawer_header :: lawer-header-css"></div>
+<div th:replace="fragments/lawyer_header :: lawyer-header-css"></div>
 </head>
 <body>
-	<div th:replace="fragments/lawer_header :: lawer-header"></div>
+	<div th:replace="fragments/lawyer_header :: lawyer-header"></div>
 	<div class="mainPart">
 		<div class="container">
 			<h1 class="blue">我的竞标案件</h1>
