--- a/fxs-platform-web/src/main/resources/templates/public_lawsuit_self_service.html
+++ b/fxs-platform-web/src/main/resources/templates/public_lawsuit_self_service.html
@@ -20,7 +20,7 @@
 	       			   pluginspage="//www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash">
 	       		</embed>
 	       		 -->
-	       		 <video controls="controls">
+	       		 <video controls="controls" autoplay="autoplay">
 				  <source src="http://www.w3school.com.cn/i/movie.ogg" type="video/ogg" />
 				  <source src="http://www.w3school.com.cn/i/movie.mp4" type="video/mp4" />
 				</video>
