--- a/fxs-platform-web/src/main/resources/templates/fragments/public_header.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/public_header.html
@@ -47,14 +47,14 @@
 							<a th:href="@{/}">首页</a>
 						</li>
 						<li class="dropdown">
-							<a href="counseling_free.html" class="dropdown-toggle" data-toggle="dropdown"> 法律咨询 </a>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown"> 法律咨询 </a>
 							<ul class="dropdown-menu">
 								<li>
-									<a th:href="@{/consultation/public/free}">免费法律咨询</a>
+									<a th:href="@{/public/consultation/free}">免费法律咨询</a>
 								</li>
 								<li class="divider"></li>
 								<li>
-									<a th:href="@{/consultation/public/phone}">电话咨询</a>
+									<a th:href="@{/public/consultation/phone}">电话咨询</a>
 								</li>
 							</ul>
 						</li>
@@ -62,11 +62,11 @@
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown"> 打官司 </a>
 							<ul class="dropdown-menu">
 								<li>
-									<a th:href="@{/lawsuit/public/lawyer}">找律师打官司</a>
+									<a th:href="@{/public/lawsuit/lawyer}">找律师打官司</a>
 								</li>
 								<li class="divider"></li>
 								<li>
-									<a th:href="@{/lawsuit/public/self_service}">自助打官司</a>
+									<a th:href="@{/public/lawsuit/self_service}">自助打官司</a>
 								</li>
 							</ul>
 						</li>
