--- a/fxs-platform-web/src/main/resources/templates/litigant_dashboard.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_dashboard.html
@@ -13,36 +13,36 @@
 					<div class="col-md-4 col-sm-4">
 						<ul class="introcoupCell mycenterCell">
 							<li>
-								<a th:href="@{/consultation/litigant/free}">
+								<a th:href="@{/litigant/consultation/free}">
 									<img th:src="@{/img/mycenter_free.png}" />
 								</a>
 							</li>
 							<li>
-								<a th:href="@{/consultation/litigant/free}"><span>我的免费咨询</span></a>
+								<a th:href="@{/litigant/consultation/free}"><span>我的免费咨询</span></a>
 							</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-4">
 						<ul class="introcoupCell mycenterCell">
 							<li>
-								<a th:href="@{/consultation/litigant/phone}">
+								<a th:href="@{/litigant/consultation/phone}">
 									<img th:src="@{/img/mycenter_phone.png}" />
 								</a>
 							</li>
 							<li>
-								<a th:href="@{/consultation/litigant/phone}"><span>我的电话咨询</span></a>
+								<a th:href="@{/litigant/consultation/phone}"><span>我的电话咨询</span></a>
 							</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-4">
 						<ul class="introcoupCell mycenterCell">
 							<li>
-								<a th:href="@{/lawsuit/litigant}">
+								<a th:href="@{/litigant/lawsuit}">
 									<img th:src="@{/img/mycenter_aj.png}" />
 								</a>
 							</li>
 							<li>
-								<a th:href="@{/lawsuit/litigant}"><span>我的竞标案件</span></a>
+								<a th:href="@{/litigant/lawsuit}"><span>我的竞标案件</span></a>
 							</li>
 						</ul>
 					</div>
