--- a/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer_step2.html
+++ b/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer_step2.html
@@ -8,17 +8,115 @@
 	<div class="mainPart">
 		<div class="container">
 			<ol class="breadcrumb">
-				<li><a href="#">免费法律咨询</a></li>
-				<li class="active">选择类型</li>
+				<li><a href="lawsuit_step1.html">选择类型</a></li>
+				<li><a href="lawsuit_step1.html">房屋买卖、房屋租赁、动拆迁</a></li>
+				<li class="active">填写信息</li>
 			</ol>
-			<h1 class="blue">请选择下一级咨询类型</h1>
-			<section class="col-md-12 col-sm-12 introcouPhone space20">
+			<h1>提交您的案情 - 填写基本信息</h1>
+			<p>
+				不知道如何填写？拨打客服热线 <span class="orange">400-850-8650</span> 获得帮助
+			</p>
+			<p>
+				<span class="orange">9406</span> 名用户正在通过 小帅网竞标模式 找律师 <a href="#">[
+					查看经典案例 ]</a>
+			</p>
+			<section class="col-md-12 col-sm-12 introcouPhone space20 sBtn">
+				<h3>您是代表谁找律师？</h3>
 				<div class="row">
-					<ul class="col-md-4 col-sm-12" th:each="subFalltypus : ${subFalltypusList}">
-						<li class="introcoupCell btnSquare">
-							<a th:href="@{/falltypus/{id}(id=${subFalltypus.id})}" th:id="${subFalltypus.id}" th:text="${subFalltypus.name}"></a>
-						</li>
+					<ul class="col-md-2 col-sm-2">
+						<li class="introcoupCell btnSquare"><a href="#">本人</a></li>
 					</ul>
+					<ul class="col-md-2 col-sm-2">
+						<li class="introcoupCell btnSquare"><a href="#">家人</a></li>
+					</ul>
+					<ul class="col-md-2 col-sm-2">
+						<li class="introcoupCell btnSquare"><a href="#">朋友</a></li>
+					</ul>
+					<ul class="col-md-2 col-sm-2">
+						<li class="introcoupCell btnSquare"><a href="#">企业</a></li>
+					</ul>
+				</div>
+				<h3 class="space10">请问您本次咨询的主要目的是？</h3>
+				<div class="row">
+					<ul class="col-md-4 col-sm-12">
+						<li class="introcoupCell btnSquare"><a href="#">纠纷已经发生，想咨询如何解决该纠纷</a></li>
+					</ul>
+				</div>
+				<div class="row">
+					<ul class="col-md-4 col-sm-12">
+						<li class="introcoupCell btnSquare cur"><a href="#">纠纷尚未发生，想咨询法律程序、风险等问题</a></li>
+					</ul>
+				</div>
+				<h3 class="space10">您家人的纠纷对象住所地在哪里？</h3>
+				<h4 class="gray">提示：如纠纷对象为个人，请填写纠纷对象的长期住所地，如纠纷对象为企业，请填写企业经营地点或者注册地点。如以上地点均无法获知，请填写纠纷发生地点。</h4>
+				<div class="row">
+					<div class="form-group col-md-4 col-sm-12">
+						<select class="form-control">
+							<option value="">选择您的所在地</option>
+						</select>
+					</div>
+				</div>
+				<h3 class="space10">纠纷是否已由法院判决或裁定？</h3>
+				<div class="row">
+					<ul class="col-md-4 col-sm-12">
+						<li class="introcoupCell btnSquare"><a href="#">纠纷是否已由法院判决或裁定？</a></li>
+					</ul>
+				</div>
+				<div class="row">
+					<ul class="col-md-4 col-sm-12">
+						<li class="introcoupCell btnSquare"><a href="#">是 -
+								已收到一审判决书或驳回起诉裁定书</a></li>
+					</ul>
+				</div>
+				<div class="row">
+					<ul class="col-md-4 col-sm-12">
+						<li class="introcoupCell btnSquare"><a href="#">是 -
+								已收到二审判决书或驳回起诉裁定书</a></li>
+					</ul>
+				</div>
+				<h3 class="space10">您家人对法院判决或仲裁裁决的态度？</h3>
+				<div class="row">
+
+					<ul class="col-md-4 col-sm-12">
+						<li class="introcoupCell btnSquare"><a href="#">不满意法院判决或仲裁裁决</a></li>
+					</ul>
+				</div>
+				<div class="row">
+					<ul class="col-md-4 col-sm-12">
+						<li class="introcoupCell btnSquare"><a href="#">满意法院判决或仲裁裁决，但对方不满意</a></li>
+					</ul>
+				</div>
+				<div class="row">
+					<ul class="col-md-4 col-sm-12">
+						<li class="introcoupCell btnSquare"><a href="#">双方均不满意法院判决或仲裁裁决</a></li>
+					</ul>
+				</div>
+				<h3 class="space10">您希望委托律师处理什么问题？</h3>
+				<div class="row">
+					<ul class="col-md-4 col-sm-12">
+						<li class="introcoupCell btnSquare"><a href="#">准备上诉</a></li>
+					</ul>
+					<ul class="col-md-4 col-sm-12">
+						<li class="introcoupCell btnSquare"><a href="#">准备对方上诉时应诉</a></li>
+					</ul>
+					<ul class="col-md-4 col-sm-12">
+						<li class="introcoupCell btnSquare"><a href="#">想找律师代理强制执行</a></li>
+					</ul>
+				</div>
+				<h3>您家人在原案件中是？</h3>
+				<div class="row">
+
+					<ul class="col-md-2 col-sm-2">
+						<li class="introcoupCell btnSquare"><a href="#">原告</a></li>
+					</ul>
+					<ul class="col-md-2 col-sm-2">
+						<li class="introcoupCell btnSquare"><a href="#">被告</a></li>
+					</ul>
+				</div>
+				<div class="row">
+					<div class="col-md-12 col-sm-12 btnNext">
+						<button type="button" class="btn btn-primary btn-lg">立即提交</button>
+					</div>
 				</div>
 			</section>
 		</div>
